kuma-control-plane/service-kuma-control-plane.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        prometheus.io/port: "5680"
        prometheus.io/scrape: "true"
    labels:
        app.kubernetes.io/instance: kuma
        app.kubernetes.io/name: kuma
    name: kuma-control-plane
    namespace: kuma-system
spec:
    ports:
        - name: http-api-server
          port: 5681
        - name: https-api-server
          port: 5682
        - name: https-admission-server
          port: 443
          targetPort: 5443
        - name: mads-server
          port: 5676
        - name: dp-server
          port: 5678
        - name: dns-server
          port: 5653
          protocol: UDP
    selector:
        app: kuma-control-plane
        app.kubernetes.io/instance: kuma
        app.kubernetes.io/name: kuma
    type: ClusterIP
