kuma-control-plane/mutatingwebhookconfiguration-kuma-admission-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
    labels:
        app.kubernetes.io/instance: kuma
        app.kubernetes.io/name: kuma
    name: kuma-admission-mutating-webhook-configuration
    namespace: kuma-system
webhooks:
    - admissionReviewVersions:
        - v1beta1
      clientConfig:
        caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU84Vm1ERnAvaVhBS0IzdXZON0ZjdDh3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlNVEE0TURNeU16STBOVE5hRncwek1UQTRNREV5TXpJMApOVE5hTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFER2lRdXJZUDIyRnplK0FDWEdWaGZRemxERVJrSHJLTTVnTXhRTkcxMFRLT3RKOVJBQjV0VWYKSndGSUliYmNnSlRUa3diN20yQzIzOW5RODBYRXVBbFlheHhyZzY3MTZ4ZzlUdzA3WGNqTjV0eXV6dHBubWNPYgp4MmJWVXNaZF [...]
        service:
            name: kuma-control-plane
            namespace: kuma-system
            path: /default-kuma-io-v1alpha1-mesh
      failurePolicy: Fail
      name: mesh.defaulter.kuma-admission.kuma.io
      rules:
        - apiGroups:
            - kuma.io
          apiVersions:
            - v1alpha1
          operations:
            - CREATE
            - UPDATE
          resources:
            - meshes
      sideEffects: None
    - admissionReviewVersions:
        - v1beta1
      clientConfig:
        caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU84Vm1ERnAvaVhBS0IzdXZON0ZjdDh3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlNVEE0TURNeU16STBOVE5hRncwek1UQTRNREV5TXpJMApOVE5hTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFER2lRdXJZUDIyRnplK0FDWEdWaGZRemxERVJrSHJLTTVnTXhRTkcxMFRLT3RKOVJBQjV0VWYKSndGSUliYmNnSlRUa3diN20yQzIzOW5RODBYRXVBbFlheHhyZzY3MTZ4ZzlUdzA3WGNqTjV0eXV6dHBubWNPYgp4MmJWVXNaZF [...]
        service:
            name: kuma-control-plane
            namespace: kuma-system
            path: /owner-reference-kuma-io-v1alpha1
      failurePolicy: Fail
      name: owner-reference.kuma-admission.kuma.io
      rules:
        - apiGroups:
            - kuma.io
          apiVersions:
            - v1alpha1
          operations:
            - CREATE
          resources:
            - circuitbreakers
            - externalservices
            - faultinjections
            - healthchecks
            - retries
            - proxytemplates
            - ratelimits
            - trafficlogs
            - trafficpermissions
            - trafficroutes
            - traffictraces
      sideEffects: None
    - admissionReviewVersions:
        - v1beta1
      clientConfig:
        caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU84Vm1ERnAvaVhBS0IzdXZON0ZjdDh3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlNVEE0TURNeU16STBOVE5hRncwek1UQTRNREV5TXpJMApOVE5hTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFER2lRdXJZUDIyRnplK0FDWEdWaGZRemxERVJrSHJLTTVnTXhRTkcxMFRLT3RKOVJBQjV0VWYKSndGSUliYmNnSlRUa3diN20yQzIzOW5RODBYRXVBbFlheHhyZzY3MTZ4ZzlUdzA3WGNqTjV0eXV6dHBubWNPYgp4MmJWVXNaZF [...]
        service:
            name: kuma-control-plane
            namespace: kuma-system
            path: /inject-sidecar
      failurePolicy: Ignore
      name: kuma-injector.kuma.io
      rules:
        - apiGroups:
            - ""
          apiVersions:
            - v1
          operations:
            - CREATE
          resources:
            - pods
      sideEffects: None
