kuma-control-plane/validatingwebhookconfiguration-kuma-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
    labels:
        app.kubernetes.io/instance: kuma
        app.kubernetes.io/name: kuma
    name: kuma-validating-webhook-configuration
    namespace: kuma-system
webhooks:
    - admissionReviewVersions:
        - v1beta1
      clientConfig:
        caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU84Vm1ERnAvaVhBS0IzdXZON0ZjdDh3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlNVEE0TURNeU16STBOVE5hRncwek1UQTRNREV5TXpJMApOVE5hTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFER2lRdXJZUDIyRnplK0FDWEdWaGZRemxERVJrSHJLTTVnTXhRTkcxMFRLT3RKOVJBQjV0VWYKSndGSUliYmNnSlRUa3diN20yQzIzOW5RODBYRXVBbFlheHhyZzY3MTZ4ZzlUdzA3WGNqTjV0eXV6dHBubWNPYgp4MmJWVXNaZF [...]
        service:
            name: kuma-control-plane
            namespace: kuma-system
            path: /validate-kuma-io-v1alpha1
      failurePolicy: Fail
      name: validator.kuma-admission.kuma.io
      rules:
        - apiGroups:
            - kuma.io
          apiVersions:
            - v1alpha1
          operations:
            - CREATE
            - UPDATE
            - DELETE
          resources:
            - circuitbreakers
            - dataplanes
            - externalservices
            - faultinjections
            - healthchecks
            - retries
            - meshes
            - proxytemplates
            - ratelimits
            - trafficlogs
            - trafficpermissions
            - trafficroutes
            - traffictraces
            - zones
      sideEffects: None
    - admissionReviewVersions:
        - v1beta1
      clientConfig:
        caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU84Vm1ERnAvaVhBS0IzdXZON0ZjdDh3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlNVEE0TURNeU16STBOVE5hRncwek1UQTRNREV5TXpJMApOVE5hTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFER2lRdXJZUDIyRnplK0FDWEdWaGZRemxERVJrSHJLTTVnTXhRTkcxMFRLT3RKOVJBQjV0VWYKSndGSUliYmNnSlRUa3diN20yQzIzOW5RODBYRXVBbFlheHhyZzY3MTZ4ZzlUdzA3WGNqTjV0eXV6dHBubWNPYgp4MmJWVXNaZF [...]
        service:
            name: kuma-control-plane
            namespace: kuma-system
            path: /validate-v1-service
      failurePolicy: Ignore
      name: service.validator.kuma-admission.kuma.io
      rules:
        - apiGroups:
            - ""
          apiVersions:
            - v1
          operations:
            - CREATE
            - UPDATE
          resources:
            - services
      sideEffects: None
    - admissionReviewVersions:
        - v1beta1
      clientConfig:
        caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lSQU84Vm1ERnAvaVhBS0IzdXZON0ZjdDh3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRBZUZ3MHlNVEE0TURNeU16STBOVE5hRncwek1UQTRNREV5TXpJMApOVE5hTUJJeEVEQU9CZ05WQkFNVEIydDFiV0V0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFER2lRdXJZUDIyRnplK0FDWEdWaGZRemxERVJrSHJLTTVnTXhRTkcxMFRLT3RKOVJBQjV0VWYKSndGSUliYmNnSlRUa3diN20yQzIzOW5RODBYRXVBbFlheHhyZzY3MTZ4ZzlUdzA3WGNqTjV0eXV6dHBubWNPYgp4MmJWVXNaZF [...]
        service:
            name: kuma-control-plane
            namespace: kuma-system
            path: /validate-v1-secret
      failurePolicy: Ignore
      name: secret.validator.kuma-admission.kuma.io
      namespaceSelector:
        matchLabels:
            kuma.io/system-namespace: "true"
      rules:
        - apiGroups:
            - ""
          apiVersions:
            - v1
          operations:
            - CREATE
            - UPDATE
            - DELETE
          resources:
            - secrets
      sideEffects: None
